tests/snapshots/diagnostic_tests__ui@undefined_function.au.snap
---
source: tests/diagnostic_tests.rs
expression: "fn main() {\n\tlet a: I32 = foo()\n\tprint(a)\n}\n"
input_file: tests/inputs/diagnostics/undefined_function.au
---
Error: Undefined variable
   ╭─[ undefined_function:2:15 ]
   │
 2 │     let a: I32 = foo()
   │                  ─┬─  
   │                   ╰─── Undefined variable `foo`
───╯
